# how-to-use-libclang

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake_modules/: FindLibClang.cmake
gui/: color-scheme.cpp  color-scheme.h  highlighter.cpp  highlighter.h  libclang-gui.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
gui/clang-utils/: clang-treewidget-item.h  clang-utils.cpp  clang-utils.h
sample_files/: 1.cc  2.cc
src/: main.cc
